mejoras login y css

--- a/src/main/webapp/WEB-INF/css/login.css
+++ b/src/main/webapp/WEB-INF/css/login.css
@@ -1,12 +1,11 @@
 @import url("https://fonts.googleapis.com/css?family=Lato:400,700");
 #bg {
-  background-image: url('../img/background.jpg');
   position: fixed;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
-  background-size: cover;
+  background-size: span;
   filter: blur(5px);
 }
 
